--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://TestMan:Hatelove48@cluster0.njfpy.mongodb.net/FutureFurnitures?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Admin:Futurefurniture100@cluster0.67iuj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+xMONGO_URL = mongodb://localhost:27017
