--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.5"
   },
