--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emailjs/browser": "^3.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "emailjs-com": "^3.2.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "node-mailjet": "^3.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
