--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@mailchimp/mailchimp_transactional": "^1.0.47",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
